# agent-infra-stack

./: .env.example  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  celery_app.py  config.py  main.py
api/routers/: health.py  tasks.py
docs/: context.md  production-strategy.md  roadmap.md
docs/devlog/: 001-planning-and-stack.md  002-infra-foundation.md  003-api-gateway.md  004-infra-fixes.md  005-worker-core.md  006-graph-skeleton.md  007-agent-nodes-router.md  008-agent-nodes-research.md  009-agent-nodes-critique.md  010-graph-instantiantion.md
infra/postgres/: init.sql
shared/: schemas.py
worker/: Dockerfile  celery_app.py  config.py  graph.py  tasks.py
worker/agents/: __init__.py  critique.py  output.py  research.py  router.py
